<resources>
    <string name="app_name">Todo App</string>
    <string name="deskripsi">ini adalah logo todo</string>
    <string name="welcome">Welcome in Todo App</string>
    <string name="hintname">Masukan Nama</string>
    <string name="pass">Masukan Password</string>
    <string name="tfname">Name</string>
    <string name="tfnama">Nama</string>
    <string-array name="brew_array">
        <item>Cappuccino</item>
        <item>Espresso</item>
        <item>Mocha</item>
        <item>Caffè Americano</item>
        <item>Cafe Zorro</item>
    </string-array>
</resources>